--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -27,12 +27,12 @@
                         <div class="carousel-inner" >
                         {% for image in p.images.all %}
                             {% if forloop.counter0 == 0 %}
-                                <div class="carousel-item active  ">
-                                    <img class="d-block w-100"  src={{ image.modelimage.url }} alt="First slide">
+                                <div class="carousel-item active" style="max-height: 400px; overflow: hidden;">
+                                    <img class="d-block w-100" style="display: block;max-width: 100%; height: auto !important;width: auto\9; -ms-interpolation-mode: bicubic;" src={{ image.modelimage.url }} alt="First slide">
                                 </div>
                             {% else %}
-                                <div class="carousel-item">
-                                    <img class="d-block w-100"  src={{ image.modelimage.url }} alt="Further slide">
+                                <div class="carousel-item" style="max-height: 400px; overflow: hidden;">
+                                    <img class="d-block w-100" style="display: block;max-width: 100%; height: auto !important;width: auto\9; -ms-interpolation-mode: bicubic;"  src={{ image.modelimage.url }} alt="Further slide">
                                 </div>
                             {% endif %}
                             {% endfor %}
