changed image style

--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -48,8 +48,8 @@
                         </div>
                     {% else %}
                         {% for image in p.images.all %}
-                                <div>
-                                    <img src="{{ image.modelimage.url }}" class="fit-image" alt='image'>
+                                <div style="max-height: 400px; overflow: hidden;">
+                                    <img style="display: block;max-width: 100%; height: auto !important;width: auto\9; -ms-interpolation-mode: bicubic;" src="{{ image.modelimage.url }}" class="fit-image" alt='image'>
                                 </div>
                         {% endfor %}
                     {% endif %}
