--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -49,7 +49,7 @@
                     {% else %}
                         {% for image in p.images.all %}
                                 <div style="max-height: 80vh; overflow: hidden;">
-                                    <img style="display: block;max-width: 100%; height: auto !important;width: auto\9; -ms-interpolation-mode: bicubic;" src="{{ image.modelimage.url }}" class="fit-image" alt='image'>
+                                    <img style="display: block;max-width: 100%; height: auto !important;width: auto\9; -ms-interpolation-mode: bicubic;align-content: center;" src="{{ image.modelimage.url }}" class="fit-image" alt='image'>
                                 </div>
                         {% endfor %}
                     {% endif %}
