--- a/homepage/templates/homepage/post_form.html
+++ b/homepage/templates/homepage/post_form.html
@@ -1,6 +1,7 @@
 {% extends 'homepage/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+{{ postForm.media }}
 <div class="row justify-content-center pt-4">
     <div class='col-1'></div>
     <div class='col-10' align="center">
@@ -12,9 +13,7 @@
         {{ hidden }}
     {% endfor %}
     <p><h4>Caption</h4></p>
-    {% for field in postForm %}
-     {{ field }} <br />
-    {% endfor %}
+    <p>{{postForm.content| safe}}</p>
     <div class='pb-4'></div>
     <small> To submit a post, a photo must be attached to first image box! </small>
 
