--- a/homepage/templates/homepage/post_detail.html
+++ b/homepage/templates/homepage/post_detail.html
@@ -97,7 +97,7 @@
         </a>
 
 
-        <div class='mb-0'><p class='mb-0'><a href="{% url 'public-profile' p.author.username %}" id="author-link"><b>{{ p.author }}</b></a> {{ p.caption }}</p></div>
+        <div class='mb-0'><p class='mb-0'><a href="{% url 'public-profile' p.author.username %}" id="author-link"><b>{{ p.author }}</b></a> {{ p.caption| safe }}</p></div>
         <div id='postdivider'>
                 <p id="post-detail-time">
                     <small>{{ p.date_posted|naturaltime|upper }}</small>
@@ -127,5 +127,6 @@
         </div>
         {% endfor %}
     </div>
+    <div>{{ p.content| safe }}</div>
         </div>
 {% endblock content %}
