--- a/homepage/templates/homepage/post_form.html
+++ b/homepage/templates/homepage/post_form.html
@@ -14,6 +14,7 @@
     {% endfor %}
     <p><h4>Caption</h4></p>
     <p>{{postForm.content| safe}}</p>
+    <p>{{postForm.caption| safe}}</p>
     <div class='pb-4'></div>
     <small> To submit a post, a photo must be attached to first image box! </small>
 
