added caption at correct place

--- a/homepage/templates/homepage/post_form.html
+++ b/homepage/templates/homepage/post_form.html
@@ -13,8 +13,10 @@
         {{ hidden }}
     {% endfor %}
     <p><h4>Caption</h4></p>
-    <p>{{postForm.content| safe}}</p>
     <p>{{postForm.caption| safe}}</p>
+    <p><h4>Details</h4></p>
+    <p>{{postForm.content| safe}}</p>
+    
     <div class='pb-4'></div>
     <small> To submit a post, a photo must be attached to first image box! </small>
 
