--- a/homepage/templates/homepage/post_form.html
+++ b/homepage/templates/homepage/post_form.html
@@ -15,7 +15,7 @@
     <p><h4>Caption</h4></p>
     <p>{{postForm.caption| safe}}</p>
     <p><h4>Details</h4></p>
-    <p>{{postForm.content| safe}}</p>
+    <div class="d-none d-md-block justify-content-center"><p>{{postForm.content| safe}}</p></div>
     
     <div class='pb-4'></div>
     <small> To submit a post, a photo must be attached to first image box! </small>
