details form hidden in mobile

--- a/homepage/templates/homepage/post_form.html
+++ b/homepage/templates/homepage/post_form.html
@@ -14,8 +14,10 @@
     {% endfor %}
     <p><h4>Caption</h4></p>
     <p>{{postForm.caption| safe}}</p>
-    <p><h4>Details</h4></p>
-    <div class="d-none d-md-block justify-content-center"><p>{{postForm.content| safe}}</p></div>
+    <div class="d-none d-md-block justify-content-center">
+        <p><h4>Details</h4></p>
+        <p>{{postForm.content| safe}}</p>
+    </div>
     
     <div class='pb-4'></div>
     <small> To submit a post, a photo must be attached to first image box! </small>
