--- a/homepage/static/homepage/main.css
+++ b/homepage/static/homepage/main.css
@@ -66,7 +66,7 @@ button.post {
 
 #search-bar{
     height: 28px;
-    width: 215px;
+    width: 40vw;
     background-color: #FAFAFA;
 }
 
@@ -261,5 +261,7 @@ body {
 .search-list{
   flex-direction: column-reverse;
 }
+
+
 
 
