--- a/homepage/templates/homepage/explore.html
+++ b/homepage/templates/homepage/explore.html
@@ -1,9 +1,8 @@
-
 {% extends 'homepage/base.html' %}
 {% block content %}
 <div>
 <div style="height: 20px;"></div>
-<div class="d-flex justify-content-center">
+<div class="d-md-none d-flex justify-content-center">
     <form action="{% url 'search-list' %}" method='GET'>
         <input name='q' type='text' placeholder='Search...' class='form-control '  id='search-bar' autocomplete="off">
     </form>
@@ -48,20 +47,20 @@
 
     <div class="row" id='profile'>
         {% for p in posts %}
-            <div class='col-4 padding-0'>
-                <div class='card'>
+            <div class='col-4 padding-0 my-auto'>
+                <div class='card-fluid' >
             {% if p.images.count > 1 %}
                 {% for image in p.images.all %}
                     {% if forloop.counter0 == 0 %}
                         <a href="{% url 'post-detail' p.id %}" id="detail-link">
-                            <img class='card-img-top img-fluid' src='{{ image.modelimage.url }}' alt='images'>
+                            <img class='card-img img-thumbnail img-fluid fit-image' src='{{ image.modelimage.url }}' alt='images'>
                         </a>
                     {% endif %}
                 {% endfor %}
             {% else %}
                 {% for image in p.images.all %}
                     <a href="{% url 'post-detail' p.id %}" id="detail-link">
-                        <img class='card-img-top img-fluid' src='{{ image.modelimage.url }}' alt='images'>
+                        <img class='card-img img-thumbnail img-fluid fit-image' src='{{ image.modelimage.url }}' alt='images'>
                     </a>
                 {% endfor %}
             {% endif %}
