changed __str__ of post to show default if no caption

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -115,6 +115,7 @@
                 <div id='postdivider'></div>
                 
                 {% for chapter in chapters%}
+                <a class="dropdown-item" href="{% url 'chapter-home' chapter.id %}">{{chapter.chapter}}</a>
                 {% if chapter.subject.subject == subject.subject %}
                 <div>{{chapter.chapter}}</div>
                 <a class="dropdown-item" href="{% url 'chapter-home' chapter.id %}">{{chapter.chapter}}</a>
