changed some css

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -134,10 +134,10 @@
         <div class="row h-100">
             <div class="col-12 col-md-8 feed col-centered padding-0">
                 <div class="d-md-none"  >
-                    <button class="btn btn-info dropdown-toggle" style="position: fixed; margin-right: 1px; margin-left: 72vw; " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Chapter
+                    <button class="btn post dropdown-toggle" style="position: fixed; margin-right: 1px; margin-left: 72vw; " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                       Chapter
                     </button>
-                    <div class="dropdown-menu" style="overflow-y: auto;" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu" style="overflow-y: scroll;max-height: 70vh;" aria-labelledby="dropdownMenuButton">
                         {% for subject in subjects%}
                 <div style="margin-top: 2vh;"></div>
                 <h6 class="dropdown-header">{{subject.subject}}</h6>
