added scrollable prop to chpter for sm devices

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -134,8 +134,8 @@
         <div class="row h-100">
             <div class="col-12 col-md-8 feed col-centered padding-0">
                 <div class="d-md-none"  >
-                    <button class="btn post dropdown-toggle" style="position: fixed; margin-right: 1px; margin-left: 72vw; " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       Chapter
+                    <button class="btn post dropdown-toggle" style=" color: white ;position: fixed; margin-right: 1px; margin-left: 72vw; " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Chapter
                     </button>
                     <div class="dropdown-menu" style="overflow-y: scroll;max-height: 70vh;" aria-labelledby="dropdownMenuButton">
                         {% for subject in subjects%}
