--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -5,7 +5,9 @@
 {% block content %}
 
 
-<div class='infinite-container'>
+<div class='infinite-container' style="padding-top: 65px;">
+
+    
     
     {% for p in posts %}
     
